--- a/style.css
+++ b/style.css
@@ -2,3 +2,45 @@
     align-items: center;
     text-align: center;
 }
+.row{
+    display: flex; 
+    flex-direction: row; 
+    justify-content: center;
+}
+
+.roundContainer{
+    background-color: brown;
+    color:white;
+    position: relative;
+    border-radius: 25%;
+    width: 5%;
+    text-align: center;
+    
+}
+.roundContainerText{
+    margin-top: 30%;
+    margin-bottom: 30%;
+}
+.leftSpace{
+    margin-left: 25%;
+}
+
+.backBar{
+    width:90%;
+    height: auto;
+    margin-left: 5%;
+    background-color: black;
+    padding: 0.5%;
+
+    margin-top:-3.5%;
+}
+
+.mainBar{
+    width:75%;
+    height: auto;
+    margin-left: 1%;
+    margin-right: 1%;
+    background-color: green;
+    padding: 1%;
+
+}
