--- a/style.css
+++ b/style.css
@@ -44,3 +44,26 @@
     padding: 1%;
 
 }
+
+
+
+
+
+
+
+/*table*/
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+  }
+  
+  td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+  }
+  
+  tr:nth-child(even) {
+    background-color: #dddddd;
+  }
