--- a/style.css
+++ b/style.css
@@ -48,11 +48,10 @@
 
   transition-property: all;
   transition-duration: 1s;
-  transition-timing-function: cubic-bezier(0, 1, 0.1, 0.2, 0.7, 1);  
+  transition-timing-function: cubic-bezier(0, 1, 0.1, 0.2, 0.7, 1);
   min-height: 100%;
   min-width: 0%;
   width: 0%;
-
 }
 
 /*titles*/
@@ -63,8 +62,8 @@
   color: white;
 }
 .score {
-    color: #ededed;
-    font-size: larger;
+  color: #ededed;
+  font-size: larger;
 }
 
 /*buttons*/
@@ -82,9 +81,9 @@
   background-color: #c6420e;
 }
 
-.smallButtons{
-    background-color: #e6621f;
-  border:none;
+.smallButtons {
+  background-color: #e6621f;
+  border: none;
   font-size: large;
   border-radius: 20px;
   margin: 0% 5%;
@@ -92,10 +91,8 @@
   color: #ededed;
 }
 .smallButtons:hover {
-    background-color: #c6420e;
-  }
-
-
+  background-color: #c6420e;
+}
 
 /*forms*/
 
@@ -131,8 +128,6 @@
   color: #ededed;
 }
 
-
-
 /*table*/
 table {
   font-family: arial, sans-serif;
@@ -146,16 +141,13 @@ th {
   border: 1px solid #dddddd;
   text-align: center;
   padding: 8px;
-  color:white;
+  color: white;
 }
 
 tr:nth-child(even) {
   background-color: #898989;
-  color:black;
+  color: black;
 }
-
-
-
 
 /*main*/
 
@@ -174,9 +166,6 @@ body {
 .ranking {
   background-color: #333333;
 }
-
-
-
 
 /*questions*/
 
@@ -210,4 +199,25 @@ body {
   font-size: x-large;
   margin-top: 3.25%;
   margin-bottom: 7.25%;
+}
+
+/*animation*/
+
+.hideAndShow {
+  animation-name: cssAnimation;
+  animation-duration: 1s;
+  -animation-iteration-count: 1;
+  animation-timing-function: ease;
+  animation-fill-mode: forwards;
+}
+@keyframes cssAnimation {
+  0% {
+    opacity: 100%;
+  }
+  50% {
+    opacity: 0%;
+  }
+  100% {
+    opacity:100%;
+  }
 }
